--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -102,3 +102,11 @@
   0%{transform:rotate(0deg);}
   100%{transform:rotate(360deg);}
 }
+.forgot{
+  cursor:pointer;
+  color:#b3b3b3;
+}
+
+.forgot:hover{
+  text-decoration:underline;
+}
