--- a/src/components/TitileCards/TitleCards.css
+++ b/src/components/TitileCards/TitleCards.css
@@ -33,5 +33,34 @@
     z-index: 2;
     text-shadow: 0 0 6px rgba(0,0,0,0.8);
 }
+.card {
+  width: 200px;
+  margin-right: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.card img {
+  width: 100%;
+  border-radius: 6px;
+}
+
+.card-info {
+  background: #111;
+  padding: 6px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 70px;
+}
+
+.mylist-btn {
+  background: red;
+  border: none;
+  color: white;
+  padding: 6px;
+  cursor: pointer;
+}
+
 
 
