--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -61,3 +61,12 @@
 .more-cards{
     padding-left: 6%;
 }
+.recommended-section{
+  padding:20px 40px;
+}
+
+.grid{
+  display:grid;
+  grid-template-columns: repeat(auto-fill,minmax(180px,1fr));
+  gap:15px;
+}
